# wikidump-downloader

./: README.md  makefile  pyproject.toml  wikidump_downloader.py
wikidump_downloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
