[project]
name = "wikidump-downloader"
version = "0.1.0"
description = ""
authors = [
  { name = "ider", email = "admin@knogen.cn" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = []

[project.scripts]
start = "wikidump_downloader:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[[tool.uv.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple"
priority = "default"